// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render click wrappers 1`] = `
<React.Fragment>
  <div
    id="toggle"
  />
  <div
    id="overlay"
  />
</React.Fragment>
`;

exports[`should render children and overlay 1`] = `
<React.Fragment>
  <div
    id="toggle"
  />
  <OutsideClickHandler
    onClickOutside={[MockFunction]}
  >
    <div
      id="overlay"
    />
  </OutsideClickHandler>
</React.Fragment>
`;

exports[`should render only children 1`] = `
<React.Fragment>
  <div
    id="toggle"
  />
</React.Fragment>
`;

exports[`should render when closeOnClick=true 1`] = `
<React.Fragment>
  <div
    id="toggle"
  />
  <DocumentClickHandler
    onClick={[MockFunction]}
  >
    <div
      id="overlay"
    />
  </DocumentClickHandler>
</React.Fragment>
`;
